--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # This .gitignore file should be placed at the root of your Unity project directory
 
 .DS_Store
+.vscode/
 
 #
 # Get latest from https://github.com/github/gitignore/blob/main/Unity.gitignore
